<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>opentera_protobuf_messages</name>
    <version>0.0.0</version>
    <description>The opentera_protobuf_messages package</description>
    <maintainer email="dominic.letourneau@usherbrooke.ca">Dominic Létourneau</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>python3-protobuf</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
