<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>opentera_webrtc_demos</name>
    <version>0.0.0</version>
    <description>The opentera_webrtc_demos package</description>
    <maintainer email="dominic.letourneau@usherbrooke.ca">Dominic Létourneau</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>opentera_webrtc_ros_msgs</depend>

    <depend>opentera_webrtc_ros</depend>
    <depend>gazebo_ros</depend>
    <depend>usb_cam</depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>opentera_client_ros</exec_depend>
    <exec_depend>turtlebot3_gazebo</exec_depend>
    <exec_depend>rtabmap_ros</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>

        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>
